# ugap_bopt

./: .gitignore  README.md
output/: .tot_bopt.dat.swp  params.txt  performance.txt
output_0/: params.txt  performance.txt
output_1/: params.txt  performance.txt
output_4/: params.txt  performance.txt
src/: .main.cpp.swp  BayesianOpt.cpp  BayesianOpt.h  CMakeLists.txt  GaussianProcess.cpp  GaussianProcess.h  Voxel.cpp  Voxel.h  common.h  helper_functions.cpp  helper_functions.h  main.cpp
src/build_0/: CMakeCache.txt  Makefile  cmake_install.cmake  opt_ugap
src/build_1/: CMakeCache.txt  Makefile  cmake_install.cmake  opt_ugap
src/build_3/: CMakeCache.txt  Makefile  cmake_install.cmake  opt_ugap
